# CiCLONE

./: .cursor.json  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: memory-bank.md  memory-bank.mdc
ciclone/: _metadata.py  main.py  main_cli.py  operations.py  subject.py  utility.py
ciclone/config/: config.yaml  config.yaml.template  config_ct.yaml  config_mri.yaml  naming_conventions.yaml
ciclone/controllers/: __init__.py  abstract_worker_controller.py  config_dialog_controller.py  crosshair_controller.py  electrode_controller.py  image_controller.py  import_controller.py  main_controller.py  processing_controller.py  subject_controller.py  subject_form_controller.py  tree_view_controller.py
ciclone/core/: electrode_reader.py  electrodes.py  operations.py  stages.py  subject_importer.py
ciclone/domain/: __init__.py  electrode_element.py  electrodes.py  subject.py
ciclone/forms/: AboutDialog.ui  AboutDialog_ui.py  ImagesViewer.ui  ImagesViewer_ui.py  MainWindow.ui  MainWindow_ui.py  PipelineConfig.ui  PipelineConfig_ui.py  Viewer3D.ui  Viewer3D_ui.py
ciclone/interfaces/: __init__.py  view_interfaces.py
ciclone/managers/: __init__.py  config_transaction_manager.py
ciclone/models/: __init__.py  application_model.py  atlas_model.py  coordinate_model.py  crosshair_model.py  electrode_model.py  image_entry.py  image_model.py  import_job.py  job_validation_mixin.py  subject_data_factory.py  subject_form_model.py  subject_model.py
ciclone/services/: __init__.py  config_service.py  naming_service.py  operation_metadata_parser.py  registration_target_resolver.py
ciclone/ui/: AboutDialog.py  ClickableImageLabel.py  ImagesViewer.py  MainWindow.py  PipelineConfigDialog.py  PreviewDialog.py  Viewer3D.py
ciclone/utils/: __init__.py  electrode_reader.py  file_utils.py  utility.py
ciclone/workers/: AbstractWorker.py  ImageProcessingProcess.py  ImageProcessingWorker.py  ImportProcess.py  ImportWorker.py
clone/: main.py  operations.py  subject.py
clone/config/: config.yaml
docs/: config-transaction-management.md
poc/: electrode_benchmark.py
tests/: __init__.py  run_tests.py  test_detection_service.py  test_electrode_view_delegate.py  test_naming_service.py  test_subject_data_factory.py  test_subject_domain.py  test_subject_file_service.py
(+43 files in other folders)
