[tool.poetry]
name = "ciclone"
version = "0.1.0"
description = "Cico Cardinale's Localization Of Neuro-electrodes"
authors = ["Florian Sipp <florian.sipp@chuv.ch>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyyaml = "^6.0"
numpy = "^2.2.0"
pyqt6 = "^6.8.1"
argcomplete = "^3.2.2"
nibabel = "^5.3.2"

[tool.poetry.scripts]
ciclone = "ciclone.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
