[tool.poetry]
name = "ciclone"
version = "2.0.0"
description = "Cico Cardinale's Localization Of Neuro-electrodes"
authors = ["Florian Sipp <florian.sipp@chuv.ch>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyyaml = "^6.0.1"
numpy = "^2.2.0"
pyqt6 = "^6.8.1"
argcomplete = "^3.2.2"
nibabel = "^5.3.2"
vtk = "^9.4.2"
pillow = "^10.0.0"
docling = "^2.37.0"
markdown = "^3.6"
scipy = "^1.11.0"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.0"
opencv-python = "^4.8.0"
# Clustering for electrode detection
hdbscan = "^0.8.33"
# Optional ML dependencies for SAM-based detection (install with: poetry install -E ml)
torch = {version = "^2.9.1", optional = true}
torchvision = {version = "^0.24.1", optional = true}
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git", optional = true}

[tool.poetry.extras]
ml = ["torch", "torchvision", "segment-anything"]

[tool.poetry.scripts]
ciclone = "ciclone.main:main"
ciclone-cli = "ciclone.main_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
