[tool.poetry]
name = "ciclone"
version = "2.0.1"
description = "Cico Cardinale's Localization Of Neuro-electrodes"
authors = ["Florian Sipp <florian.sipp@chuv.ch>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyyaml = "^6.0.1"
numpy = "^2.2.0"
pyqt6 = "^6.8.1"
argcomplete = "^3.2.2"
nibabel = "^5.3.2"
vtk = "^9.4.2"
pillow = "^10.0.0"
docling = "^2.37.0"
markdown = "^3.6"

[tool.poetry.scripts]
ciclone = "ciclone.main:main"
ciclone-cli = "ciclone.main_cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
